--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -18,82 +18,6 @@
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  font-family: Helvetica, Arial, sans-serif;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.projects .slides {
-  width: 30%;
-  max-width: 500px;
-  height: 300px;
-}
-
-.projects .slides .prev-arrow {
-  color: var(--dark);
-  position: absolute;
-  top: 50%;
-  left: 10px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  -webkit-box-flex: 5%;
-      -ms-flex: 5%;
-          flex: 5%;
-  cursor: pointer;
-  border-radius: 50%;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.projects .slides .prev-arrow:hover, .projects .slides .prev-arrow:focus {
-  background-color: rgba(0, 0, 0, 0.6);
-  color: var(--primary);
-}
-
-.projects .slides .next-arrow {
-  color: var(--dark);
-  position: absolute;
-  top: 50%;
-  right: 0;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  -webkit-box-flex: 5%;
-      -ms-flex: 5%;
-          flex: 5%;
-  cursor: pointer;
-  border-radius: 50%;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.projects .slides .next-arrow:hover, .projects .slides .next-arrow:focus {
-  background-color: rgba(0, 0, 0, 0.6);
-  color: var(--primary);
-}
-
-.projects .slides .image {
-  -o-object-fit: fill;
-     object-fit: fill;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-}
-
-.projects .description {
-  width: 25%;
-  max-width: 500px;
-  min-width: 300px;
-  margin-left: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -101,114 +25,85 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.projects .description .technology {
+.projects h2 {
+  color: var(--primary);
+  margin-bottom: 1rem;
+  font-size: 2.5rem;
+}
+
+.projects .project-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  min-width: 300px;
-  margin-top: 0.75rem;
+  max-width: 1100px;
 }
 
-.projects .description .technology span {
-  background-color: var(--blue);
-  padding: 0.25rem 0.5rem;
-  margin: 0.5rem 0.5rem 0 0;
+.projects .project-container .project {
+  width: 500px;
+  height: 320px;
+  margin: 1rem;
+  position: relative;
 }
 
-.projects .description h1 {
-  color: var(--blue);
-  font-size: 2rem;
+.projects .project-container .project img {
+  width: 100%;
+  height: 100%;
 }
 
-.projects .description p {
+.projects .project-container .project .img-overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(0, 0, 0, 0.6);
+  opacity: 0;
+  -webkit-transition: opacity 0.4s;
+  transition: opacity 0.4s;
+}
+
+.projects .project-container .project .img-overlay:hover, .projects .project-container .project .img-overlay:focus {
+  opacity: 1;
+}
+
+.projects .project-container .project .img-overlay h3 {
   color: var(--primary);
-  margin-top: 1rem;
-  font-size: 1.25rem;
+  font-size: 2rem;
+  margin-bottom: 1rem;
 }
 
-.projects .description a {
-  text-decoration: none;
-  margin-top: 1rem;
+.projects .project-container .project .img-overlay button {
+  padding: 0.5rem 1.25rem;
   font-size: 1.25rem;
+  background-color: transparent;
   color: var(--blue);
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  -webkit-transition: color 0.4s;
-  transition: color 0.4s;
-}
-
-.projects .description a:hover {
-  color: var(--blue-dark);
-}
-
-@media all and (max-width: 1024px) {
-  .projects {
-    padding: 0 0 1rem 0;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    overflow: scroll;
-  }
-  .projects .technology {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .projects .slides {
-    width: 80%;
-    height: 400px;
-  }
-  .projects a {
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
-  }
-  .projects .description {
-    margin-top: 2rem;
-  }
-  .projects .description h1 {
-    text-align: center;
-  }
-  .projects .description p {
-    text-align: center;
-  }
-  .projects .description li {
-    text-align: center;
-    text-indent: 0;
-  }
-}
-
-@media all and (max-width: 768px) {
-  .projects {
-    padding-top: 2rem;
-  }
-  .projects .slides {
-    max-width: none;
-    width: 60%;
-  }
-  .projects .technology {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-
-@media all and (max-height: 680px) {
-  .projects {
-    height: 125vh;
-    padding: 4rem 0;
-  }
-  .projects .description {
-    margin: 1rem auto;
-  }
+  border: 2px solid var(--blue);
+  cursor: pointer;
 }
 /*# sourceMappingURL=projects.css.map */
