--- a/src/css/projects.scss
+++ b/src/css/projects.scss
@@ -13,167 +13,68 @@
   height: 100vh;
   background-color: var(--dark-light);
   user-select: none;
-  font-family: Helvetica, Arial, sans-serif;
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
 
-  .slides {
-    width: 30%;
-    max-width: 500px;
-    height: 300px;
-
-    .prev-arrow {
-      color: var(--dark);
-      position: absolute;
-      top: 50%;
-      left: 10px;
-      transform: translateY(-50%);
-      flex: 5%;
-      cursor: pointer;
-      border-radius: 50%;
-      transition: all 0.3s;
-
-      &:hover,
-      &:focus {
-        background-color: rgba(0, 0, 0, 0.6);
-        color: var(--primary);
-      }
-    }
-
-    .next-arrow {
-      color: var(--dark);
-      position: absolute;
-      top: 50%;
-      right: 0;
-      transform: translateY(-50%);
-      flex: 5%;
-      cursor: pointer;
-      border-radius: 50%;
-      transition: all 0.3s;
-
-      &:hover,
-      &:focus {
-        background-color: rgba(0, 0, 0, 0.6);
-        color: var(--primary);
-      }
-    }
-
-    .image {
-      object-fit: fill;
-      display: flex;
-      width: 100%;
-      height: 100%;
-      border-radius: 10px;
-    }
+  h2 {
+    color: var(--primary);
+    margin-bottom: 1rem;
+    font-size: 2.5rem;
   }
 
-  .description {
-    width: 25%;
-    max-width: 500px;
-    min-width: 300px;
-    margin-left: 2rem;
+  .project-container {
     display: flex;
-    flex-direction: column;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    max-width: 1100px;
 
-    .technology {
-      display: flex;
-      flex-wrap: wrap;
-      min-width: 300px;
-      margin-top: 0.75rem;
-      span {
-        background-color: var(--blue);
-        padding: 0.25rem 0.5rem;
-        margin: 0.5rem 0.5rem 0 0;
-      }
-    }
+    .project {
+      width: 500px;
+      height: 320px;
+      margin: 1rem;
+      position: relative;
 
-    h1 {
-      color: var(--blue);
-      font-size: 2rem;
-    }
-
-    p {
-      color: var(--primary);
-      margin-top: 1rem;
-      font-size: 1.25rem;
-    }
-
-    a {
-      text-decoration: none;
-      margin-top: 1rem;
-      font-size: 1.25rem;
-      color: var(--blue);
-      width: max-content;
-      transition: color 0.4s;
-
-      &:hover {
-        color: var(--blue-dark);
-      }
-    }
-  }
-}
-
-@media all and (max-width: 1024px) {
-  .projects {
-    padding: 0 0 1rem 0;
-    flex-direction: column-reverse;
-    align-items: center;
-    overflow: scroll;
-
-    .technology {
-      justify-content: center;
-    }
-
-    .slides {
-      width: 80%;
-      height: 400px;
-    }
-
-    a {
-      align-self: center;
-    }
-
-    .description {
-      margin-top: 2rem;
-      h1 {
-        text-align: center;
+      img {
+        width: 100%;
+        height: 100%;
       }
 
-      p {
-        text-align: center;
+      .img-overlay {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: rgba($color: #000000, $alpha: 0.6);
+        opacity: 0;
+        transition: opacity 0.4s;
+
+        &:hover,
+        &:focus {
+          opacity: 1;
+        }
+
+        h3 {
+          color: var(--primary);
+          font-size: 2rem;
+          margin-bottom: 1rem;
+        }
+
+        button {
+          padding: 0.5rem 1.25rem;
+          font-size: 1.25rem;
+          background-color: transparent;
+          color: var(--blue);
+          border: 2px solid var(--blue);
+          cursor: pointer;
+        }
       }
-
-      li {
-        text-align: center;
-        text-indent: 0;
-      }
-    }
-  }
-}
-
-@media all and (max-width: 768px) {
-  .projects {
-    padding-top: 2rem;
-
-    .slides {
-      max-width: none;
-      width: 60%;
-    }
-
-    .technology {
-      justify-content: center;
-    }
-  }
-}
-
-@media all and (max-height: 680px) {
-  .projects {
-    height: 125vh;
-    padding: 4rem 0;
-
-    .description {
-      margin: 1rem auto;
     }
   }
 }
