--- a/src/css/app.css
+++ b/src/css/app.css
@@ -9,6 +9,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  min-height: 100vh;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: reverse;
       -ms-flex-direction: row-reverse;
