--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -12,7 +12,6 @@
   -webkit-box-flex: 1;
       -ms-flex: auto;
           flex: auto;
-  height: 100vh;
   background-color: var(--dark-light);
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -31,12 +30,14 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-top: 3rem;
 }
 
 .projects h2 {
   color: var(--primary);
   margin-bottom: 1rem;
   font-size: 2.5rem;
+  text-align: center;
 }
 
 .projects .project-container {
@@ -48,11 +49,13 @@
           justify-content: space-evenly;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  width: 80%;
   max-width: 1100px;
 }
 
 .projects .project-container .project {
   width: 500px;
+  min-width: 300px;
   height: 320px;
   margin: 1rem;
   position: relative;
@@ -105,5 +108,11 @@
   color: var(--blue);
   border: 2px solid var(--blue);
   cursor: pointer;
+}
+
+@media all and (max-width: 576px) {
+  .projects {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=projects.css.map */
