--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -10,28 +10,31 @@
 
 .projects {
   flex: auto;
-  height: 100vh;
   background-color: var(--dark-light);
   user-select: none;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-top: 3rem;
 
   h2 {
     color: var(--primary);
     margin-bottom: 1rem;
     font-size: 2.5rem;
+    text-align: center;
   }
 
   .project-container {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    width: 80%;
     max-width: 1100px;
 
     .project {
       width: 500px;
+      min-width: 300px;
       height: 320px;
       margin: 1rem;
       position: relative;
@@ -76,5 +79,11 @@
         }
       }
     }
+  }
+}
+
+@media all and (max-width: 576px) {
+  .projects {
+    width: 100%;
   }
 }
